DigicielFull/force-app/main/default/objects/GSM_Change_Request__c/fields/Change_Request_Amouint__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Amouint__c</fullName>
    <label>Change Request Amouint</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>