DigicielFull/force-app/main/default/objects/GSM_Change_Request__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GSM Change Requests</relationshipLabel>
    <relationshipName>GSM_Change_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>