DigicielFull/force-app/main/default/objects/GSM_Change_Request__c/fields/Subscriber_Detail__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriber Detail</label>
    <referenceTo>Subscriber_Detail__c</referenceTo>
    <relationshipLabel>GSM Change Requests</relationshipLabel>
    <relationshipName>GSM_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>